--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,10 +94,11 @@
             android:layout_marginBottom="400dp"
             android:background="@drawable/radius_box"
             android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/agur"></ImageView>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/onlineorder"></ImageView>
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
@@ -108,10 +109,10 @@
             android:background="@drawable/radius_box"
             android:orientation="horizontal">
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ceri"></ImageView>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/foodpack"></ImageView>
 
         </RelativeLayout>
         <RelativeLayout
@@ -126,7 +127,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/lemon"></ImageView>
+                    android:src="@drawable/salad"></ImageView>
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
@@ -136,10 +137,11 @@
             android:layout_marginBottom="200dp"
             android:background="@drawable/radius_box"
             android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/melon"></ImageView>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/fastfood"></ImageView>
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
@@ -148,10 +150,11 @@
             android:layout_marginTop="450dp"
             android:background="@drawable/radius_box"
             android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/nanas"></ImageView>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/roastedchicken"></ImageView>
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
@@ -163,5 +166,5 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/nanas"></ImageView>
-</RelativeLayout>
+                android:src="@drawable/pizza"></ImageView>
+        </RelativeLayout>
