linear dan relative layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,101 +70,92 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C5BCC6"
+    android:background="@color/ungumuda"
     tools:context=".MainActivity">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="#5C1168">
+        android:background="@color/ungu">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="50dp"
+            android:gravity="center"
+            android:text="puspadaratika"
+            android:textColor="@color/ungumuda"
+            android:textSize="40dp"
+            android:textStyle="bold">
+
+        </TextView>
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="150dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="50dp">
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginRight="200dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="400dp"
-            android:background="@drawable/radius_box"
-            android:orientation="horizontal">
-
+            android:orientation="vertical"
+            tools:context=".MainActivity">
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/onlineorder"></ImageView>
-        </RelativeLayout>
-        <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="150dp"
+                android:src="@drawable/onlineorder"
+                android:background="@drawable/radius_box">
+            </ImageView>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="150dp"
+                android:src="@drawable/salad"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/radius_box">
+            </ImageView>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="150dp"
+                android:src="@drawable/pizza"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/radius_box">
+            </ImageView>
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="200dp"
-            android:layout_marginBottom="400dp"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/radius_box"
-            android:orientation="horizontal">
-
+            android:orientation="vertical"
+            tools:context=".MainActivity">
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/foodpack"></ImageView>
-
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginRight="200dp"
-            android:layout_marginTop="250dp"
-            android:layout_marginBottom="200dp"
-            android:background="@drawable/radius_box"
-            android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/salad"></ImageView>
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="200dp"
-            android:layout_marginTop="250dp"
-            android:layout_marginBottom="200dp"
-            android:background="@drawable/radius_box"
-            android:orientation="horizontal">
-
+                android:layout_width="wrap_content"
+                android:layout_height="150dp"
+                android:src="@drawable/foodpack"
+                android:background="@drawable/radius_box"></ImageView>
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/fastfood"></ImageView>
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginRight="200dp"
-            android:layout_marginTop="450dp"
-            android:background="@drawable/radius_box"
-            android:orientation="horizontal">
+                android:layout_width="wrap_content"
+                android:layout_height="150dp"
+                android:src="@drawable/fastfood"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/radius_box"></ImageView>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="150dp"
+                android:src="@drawable/roastedchicken"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/radius_box"></ImageView>
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/roastedchicken"></ImageView>
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="200dp"
-            android:layout_marginTop="450dp"
-            android:background="@drawable/radius_box"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/pizza"></ImageView>
-        </RelativeLayout>
+        </LinearLayout>
+
+
+    </RelativeLayout>
+
+
+
+</RelativeLayout>
