--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,21 +109,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="150dp"
                 android:src="@drawable/onlineorder"
-                android:background="@drawable/radius_box">
+                android:background="@color/white">
             </ImageView>
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="150dp"
                 android:src="@drawable/salad"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/radius_box">
+                android:background="@color/white">
             </ImageView>
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="150dp"
                 android:src="@drawable/pizza"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/radius_box">
+                android:background="@color/white">
             </ImageView>
         </LinearLayout>
 
@@ -137,19 +137,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="150dp"
                 android:src="@drawable/foodpack"
-                android:background="@drawable/radius_box"></ImageView>
+                android:background="@color/white"></ImageView>
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="150dp"
                 android:src="@drawable/fastfood"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/radius_box"></ImageView>
+                android:background="@color/white"></ImageView>
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="150dp"
                 android:src="@drawable/roastedchicken"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/radius_box"></ImageView>
+                android:background="@color/white"></ImageView>
 
         </LinearLayout>
 
